# shipment-embedding-similarity-search

./: README.md  README_RUN_CODE.md  README_THOUGHTS.md  outputs.json  pyproject.toml
default_configs/: __init__.py
exploratory_data_analysis/: eda.ipynb
playbooks/: runner.py
results/outputs/: results_20241204_165127_v1.json
results/similarity_calcs_res/: detailed_summary_20241204_210233_v2.json
src/ai_utils/: __init__.py  base_huggingface_embedding.py  distilbert_text_embedding_model.py
src/playbooks/: app.py  runner.py
src/playbooks/default_runner_configs/: __init__.py  _generate_versioned_filename_for_outputs.py
src/playbooks/user_input/: df_cols.txt  user_queries.txt
src/tests/: mock_user_queries.txt
src/utils/: __init__.py  _add_string_version_columns_with_column_name.py  _convert_columns_to_strings.py  _convert_date_columns.py  _data_cols_types.py  _filter_data_cols.py  _find_best_match.py  _get_column_type.py  _get_overall_best_result.py  _numpy_encoder.py  _process_user_input.py  _processes_user_input.py
user_input/: df_cols.txt  user_queries.txt
